<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_trip">New Trip</string>
    <string name="view_trip">View Trip</string>
    <string name="trip_history">Trip History</string>
    <string name="cancel">Cancel</string>
    <string name="set_date">set date</string>
    <string name="set_time">set time</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="time">Time</string>
    <string name="name_title">Name:</string>
    <string name="destination_title">Destination:</string>
    <string name="friend_title">Friends:</string>
    <string name="default_text">Default text</string>
    <string name="trip_parcel">trip_parcel</string>
    <string name="date_time_format">yyyy-MM-dd HH:mm</string>
    <string name="my_location">My location</string>
    <string name="people_title">People:</string>
    <string name="address_title">Address:</string>


</resources>


